--- a/publications/publications.bib
+++ b/publications/publications.bib
@@ -1,3 +1,8 @@
+@article{vowel_harmony,
+author = {Jo, Jinyoung}
+title = {{Vowel harmony}}
+}
+
 @article{10.3389/fpsyg.2020.602623,
 abstract = {We describe a corpus of speech taking place between 30 Korean mother–child pairs, divided in three groups of Prelexical (M = 0;08), Early-Lexical (M = 1;02), and Advanced-Lexical (M = 2;03). In addition to the child-directed speech (CDS), this corpus includes two different formalities of adult-directed speech (ADS), i.e., family-directed ADS (ADS{\_}Fam) and experimenter-directed ADS (ADS{\_}Exp). Our analysis of the MLU in CDS, family-, and experimenter-directed ADS found significant differences between CDS and ADS{\_}Fam, and between ADS{\_}Fam and ADS{\_}Exp, but not between CDS and ADS{\_}Exp. Our finding suggests that researchers should pay more attention to controlling the level of formality in CDS and ADS when comparing the two registers for their speech characteristics. The corpus was transcribed in the CHAT format of the CHILDES system, so users can easily extract data related to verbal behavior in the mother–child interaction using the CLAN program of CHILDES.},
 author = {Ko, Eon-Suk and Jo, Jinyoung and On, Kyung-Woon and Zhang, Byoung-Tak},
